# churn-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml
data/raw/: Telco_customer_churn.csv  Telco_customer_churn.xlsx
docs/: ML_CANVAS.md  ROTEIRO_VIDEO_PPT.md  ROTEIRO_VIDEO_STAR.md  architecture.md  model_card.md  monitoring.md
infra/: prometheus.yml
notebooks/: 01_eda.ipynb  02_baseline.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/mlruns/1/1402da57f82d4d8dbfadd4b55b9cfcf3/: meta.yaml
notebooks/mlruns/1/1402da57f82d4d8dbfadd4b55b9cfcf3/metrics/: f1  precision  recall  roc_auc
notebooks/mlruns/1/1402da57f82d4d8dbfadd4b55b9cfcf3/tags/: mlflow.log-model.history
notebooks/mlruns/1/825920c1f6e3473cb9340e5034e00802/: meta.yaml
notebooks/mlruns/1/825920c1f6e3473cb9340e5034e00802/artifacts/: results.csv
notebooks/mlruns/1/825920c1f6e3473cb9340e5034e00802/tags/: mlflow.source.name
notebooks/mlruns/1/9d15ceb6f2c442c3ab011f4e72ba1547/: meta.yaml
notebooks/mlruns/1/ac4b148621a3463c84201f5b863f1e2d/: meta.yaml
notebooks/mlruns/1/ac4b148621a3463c84201f5b863f1e2d/metrics/: f1  precision  recall  roc_auc
notebooks/mlruns/1/ac4b148621a3463c84201f5b863f1e2d/params/: dataset_version
notebooks/mlruns/1/ac4b148621a3463c84201f5b863f1e2d/tags/: mlflow.log-model.history
notebooks/mlruns/1/b86fe8ce78f04a9ca488d2e491c22577/: meta.yaml
notebooks/mlruns/1/b86fe8ce78f04a9ca488d2e491c22577/metrics/: f1  precision  recall  roc_auc
notebooks/mlruns/1/b86fe8ce78f04a9ca488d2e491c22577/params/: features
notebooks/mlruns/1/e6bc0c6b97734b36bbf373ddfd158da2/: meta.yaml
src/api/: main.py  routes.py  schemas.py
src/app/: main.py  middleware.py  model_loader.py  routes.py  schemas.py
src/config/: settings.py
src/model/: evaluate.py  mlp.py  predict.py  prepare_data.py  threshold_tuning.py  train.py
src/models/: mlp.py
src/monitoring/: business_monitor.py  drift_monitor.py
src/pipeline/: preprocessing.py
src/pipelines/: pepiline.py
src/saved_models/: baseline_stats.json  model.pt  preprocessor.pkl
src/services/: model_service.py
src/utils/: logger.py  model_card.py  preprocessing.py
tests/: conftest.py  test_api.py  test_blackbox.py  test_data_quality.py  test_integration.py  test_model.py  test_performance.py  test_preprocessing.py  test_regression.py  test_robustness.py  test_security.py  test_smoke.py
(+11 files in other folders)
