[project]
name = "churn-prediction-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "protobuf<4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]
