[project]
name = "churn-prediction-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.19.0",
    "numpy>=1.26,<2.5",
    "openpyxl>=3.1.0",
    "pandas>=2.2,<3",
    "protobuf>=4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
